Fixed scrollbars

--- a/app/assets/stylesheets/modules/_card.scss
+++ b/app/assets/stylesheets/modules/_card.scss
@@ -29,7 +29,7 @@
   padding: $spacing-medium;
   position: relative;
   overflow-x: auto;
-  overflow-y: scroll;
+  overflow-y: hidden;
   @include mq(medium) {
     padding: $spacing-large;
   }
